--- a/plan/templates/plan/create_step1.html
+++ b/plan/templates/plan/create_step1.html
@@ -12,9 +12,13 @@
   <div class="col-sm-7">
     <div class="row CT-picker" id="city-picker">
       <div class="page-header CT-picker-heading">
-        <form class="form" id="plan-form" role="form" method="POST" style="width: 50%;">
+
+
+        <h3>创建旅行计划</h3>
+        <button type="submit" class="btn btn-default" form="plan-form">提交</button>
+      </div><!-- .CT-picker-heading -->
+      <form class="form" id="plan-form" role="form" method="POST" style="width: 50%;">
            {% csrf_token %}
-             <legend>创建旅行计划</legend>
               <div class="form-group" id="plan-title">
                 <label for="id-title" class="control-label">标题</label>
                 <div class="">
@@ -25,93 +29,10 @@
             <div class="form-group" id="plan-leaving-date">
             <label for="id-leaving-date" class="control-label">出发日期</label>
             <div class="">
-<<<<<<< HEAD
-              <input type="text" class="form-control" id="id-title" name="title" placeholder="旅行计划的标题" required>
-            </div>
-          </div><!-- /plan title -->
-
-                  <div class="form-group" id="plan-leaving-date">
-                  <label for="id-leaving-date" class="control-label">出发日期</label>
-                  <div class="">
-                    <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="id-leaving-date" data-link-format="yyyy-mm-dd">
-                      <input class="form-control" size="16" type="text" value="" readonly>
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    </div>
-                    <input type="hidden" id="id-leaving-date" name="leaving_date" value="" form="plan-form">
-                  </div>
-                </div><!-- /plan leaving date -->
-
-
-
-
-                <div class="form-group" id="plan-return-date">
-                  <label for="id-return-date" class="control-label">返回日期</label>
-                  <div class="">
-                    <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="id-return-date" data-link-format="yyyy-mm-dd">
-                      <input class="form-control" size="16" type="text" value="" readonly>
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    </div>
-                    <input type="hidden" id="id-return-date" name="return_date" value="" form="plan-form">
-                  </div>
-                </div><!-- /plan return date -->
-
-                <div class="form-group" id="plan-leaving-transportation">
-                  <label for="id-leaving-transportation" class="control-label">出行工具</label>
-                  <div class="">
-                     {{ form.leaving_transportation }}
-                  </div>
-                </div><!-- /plan leaving transportation -->
-
-                <div class="form-group" id="plan-return-transportation">
-                  <label for="id-return-transportation" class="control-label">返程工具</label>
-                  <div class="">
-                    {{ form.return_transportation }}
-                  </div>
-                </div><!-- /plan return transportation -->
-
-                <div class="form-group" id="plan-destination-city">
-                  <label for="id-destination-city" class="control-label">目的地</label>
-                  <div class="">
-
-                     {% for p in province_list %}
-
-                    {{ p.id }}
-                    {% endfor %}
-                  </div>
-                </div><!-- /plan destination city -->
-
-                <button type="submit" class="btn btn-default">提交</button>
-              </form>
-
-              <h3>asdfsadfsa</h3>
-              <small>To see example with events navigate to march 2013</small>
-            </div><!-- .CT-picker-heading -->
-
-            <div class="col-sm-3 CT-picker-item city-item">
-              <div class="thumbnail CT-picker-item-body">
-                <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
-                <div class="caption CT-picker-item-detail">
-                  <h4>上海</h4>
-                  <input type="checkbox" id="id-destination-city" name="destination_city" value="22" form="plan-form">
-                </div>
-              </div>
-            </div><!-- #city-item -->
-
-            <div class="col-sm-3 CT-picker-item city-item">
-              <div class="thumbnail CT-picker-item-body">
-                <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
-                <div class="caption CT-picker-item-detail">
-                  <h4>上海</h4>
-                  <input type="checkbox">
-                </div>
-=======
               <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="id-leaving-date" data-link-format="yyyy-mm-dd">
                 <input class="form-control" size="16" type="text" value="" readonly>
                 <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
                 <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
->>>>>>> 5cd4e64774df9ac6723109dd9c1b491740d601e0
               </div>
               <input type="hidden" id="id-leaving-date" name="leaving_date" value="" form="plan-form">
             </div>
@@ -146,7 +67,7 @@
           <div class="form-group" id="plan-destination-city">
             <label for="id-destination-city" class="control-label">目的地</label>
             <div class="">
-              <select class="form-control" id="id-destination-city" name="destination_city" form="plan-form" required>
+              <select class="form-control" id="id-destination-city" name="destination_province" form="plan-form" required>
                 {% for p in province_list %}
                 <option value="{{ p.id }}">{{ p }}</option>
                 {% endfor %}
@@ -154,43 +75,9 @@
             </div>
           </div><!-- /plan destination city -->
 
-          <button type="submit" class="btn btn-default">提交</button>
+
         </form>
-
-        <h3>asdfsadfsa</h3>
-        <small>To see example with events navigate to march 2013</small>
-      </div><!-- .CT-picker-heading -->
-      
       <div class="CT-picker-body" id="city-picker-body">
-        <div class="col-sm-3 CT-picker-item city-item">
-          <div class="thumbnail CT-picker-item-body">
-            <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
-            <div class="caption CT-picker-item-detail">
-              <h4>上海</h4>
-              <input type="checkbox" id="id-destination-city" name="destination_city" value="22" form="plan-form">
-            </div>
-          </div>
-        </div><!-- #city-item -->
-
-        <div class="col-sm-3 CT-picker-item city-item">
-          <div class="thumbnail CT-picker-item-body">
-            <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
-            <div class="caption CT-picker-item-detail">
-              <h4>上海</h4>
-              <input type="checkbox">
-            </div>
-          </div>
-        </div><!-- #city-item -->
-
-        <div class="col-sm-3 CT-picker-item city-item fade">
-          <div class="thumbnail CT-picker-item-body">
-            <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
-            <div class="caption CT-picker-item-detail">
-              <h4>上海</h4>
-              <input name="city" type="checkbox" class="CT-item-checkbox" form="plan-form" value="">
-            </div>
-          </div>
-        </div><!-- #city-item -->
       </div>
     </div><!-- #city-picker -->
   </div>
