--- a/plan/templates/plan/create_step2.html
+++ b/plan/templates/plan/create_step2.html
@@ -147,7 +147,7 @@
                       <option>------</option>
                       <option value="event-warning">吃饭</option>
                       <option value="event-success">游览景点</option>
-                      <option value="event-info">睡觉</option>
+                      <option value="event-info">睡觉</option>0
                       <option value="event-inverse">在路上</option>
                       <option value="event-special">类型5</option>
                       <option value="event-special">类型6</option>
