--- a/Co_Trip/templates/Co_Trip/index.html
+++ b/Co_Trip/templates/Co_Trip/index.html
@@ -5,146 +5,19 @@
 
 {% block css_link %}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/index.css">
+
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/about.css">
+
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/Co-Trip.css">
 {% endblock %}
 
 {% block main_content %}
+{% get_following_plan user %}
 
-      <div class="row row-offcanvas row-offcanvas-right">
-
-        <div class="col-xs-12 col-sm-9">
-          <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-          </p>
-
-          <div>
-            <ul class="nav nav-tabs">
-              <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
-
-            </ul>
-          </div><!-- /.nav-tabs -->
-          <div class="tab-content">
-            <div class="tab-pane fade in active" id="home">
-              <div class="row">
-                {% get_following_plan user %}
-
-
-
-{##}
-{#                <div class="CT-feed-item col-xs-12" data-fid="0">#}
-{#                  <div class="CT-avatar col-xs-3 col-sm-2">#}
-{#                    <a href="people/zhangrui" class="thumbnail">#}
-{#                      <img src="imgs/avatar/zr.jpg" alt="Zhang Rui" class="avatar">#}
-{#                    </a>#}
-{#                  </div>#}
-{#                  <div class="CT-feed-main col-xs-9 col-sm-10">#}
-{#                    <div class="CT-feed-main-content">#}
-{#                      <h4><a href="travel/0001">张睿东莞游</a></h4>#}
-{#                      <div class="CT-feed-summary">#}
-{#                        哈哈哈哈哈哈！！#}
-{#                        今天去东莞耍～买了台macbook！听说要扫黄了，还好我跑得早！！！！机智如我#}
-{#                        天佑东莞#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </div>#}
-{#                </div><!--/feed item-->#}
-{##}
-{##}
-{##}
-{##}
-{##}
-{#                <div class="CT-feed-item col-xs-12" data-fid="1">#}
-{#                  <div class="CT-avatar col-xs-3 col-sm-2">#}
-{#                    <a href="people/zhangrui" class="thumbnail">#}
-{#                      <img src="imgs/avatar/zr.jpg" alt="Zhang Rui">#}
-{#                    </a>#}
-{#                  </div>#}
-{#                  <div class="CT-feed-main col-xs-9 col-sm-10">#}
-{#                    <div class="CT-feed-main-content">#}
-{#                      <h4><a href="travel/0001">张睿东莞游</a></h4>#}
-{#                      <div class="CT-feed-summary">#}
-{#                        哈哈哈哈哈哈！！#}
-{#                        今天去东莞耍～买了台macbook#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </div>#}
-{#                </div><!--/feed item-->#}
-{#                <div class="CT-feed-item col-xs-12" data-fid="2">#}
-{#                  <div class="CT-avatar col-xs-3 col-sm-2">#}
-{#                    <a href="people/zhangrui" class="thumbnail">#}
-{#                      <img src="imgs/avatar/zr.jpg" alt="Zhang Rui">#}
-{#                    </a>#}
-{#                  </div>#}
-{#                  <div class="CT-feed-main col-xs-9 col-sm-10">#}
-{#                    <div class="CT-feed-main-content">#}
-{#                      <h4><a href="travel/0001">张睿东莞游</a></h4>#}
-{#                      <div class="CT-feed-summary">#}
-{#                        哈哈哈哈哈哈！！#}
-{#                        今天去东莞耍～买了台macbook#}
-{#                        再见，吃饭去！！#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </div>#}
-{#                </div><!--/feed item-->#}
-{#                <div class="CT-feed-item col-xs-12" data-fid="0">#}
-{#                  <div class="CT-avatar col-xs-3 col-sm-2">#}
-{#                    <a href="people/zhangrui" class="thumbnail">#}
-{#                      <img src="imgs/avatar/zr.jpg" alt="Zhang Rui">#}
-{#                    </a>#}
-{#                  </div>#}
-{#                  <div class="CT-feed-main col-xs-9 col-sm-10">#}
-{#                    <div class="CT-feed-main-content">#}
-{#                      <h4><a href="travel/0001">张睿东莞游</a></h4>#}
-{#                      <div class="CT-feed-summary">#}
-{#                        哈哈哈哈哈哈！！#}
-{#                        今天去东莞耍～买了台macbook！听说要扫黄了，还好我跑得早！！！！机智如我#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </div>#}
-{#                </div><!--/feed item-->#}
-{#                <div class="CT-feed-item col-xs-12" data-fid="0">#}
-{#                  <div class="CT-avatar col-xs-3 col-sm-2">#}
-{#                    <a href="people/zhangrui" class="thumbnail">#}
-{#                      <img src="imgs/avatar/zr.jpg" alt="Zhang Rui">#}
-{#                    </a>#}
-{#                  </div>#}
-{#                  <div class="CT-feed-main col-xs-9 col-sm-10">#}
-{#                    <div class="CT-feed-main-content">#}
-{#                      <h4><a href="travel/0001">张睿东莞游</a></h4>#}
-{#                      <div class="CT-feed-summary">#}
-{#                        哈哈哈哈哈哈！！#}
-{#                        今天去东莞耍～买了台macbook！听说要扫黄了，还好我跑得早！！！！机智如我#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </div>#}
-{#                </div><!--/feed item-->#}
-{#                <div class="CT-feed-item col-xs-12" data-fid="0">#}
-{#                  <div class="CT-avatar col-xs-3 col-sm-2">#}
-{#                    <a href="people/zhangrui" class="thumbnail">#}
-{#                      <img src="imgs/avatar/zr.jpg" alt="Zhang Rui">#}
-{#                    </a>#}
-{#                  </div>#}
-{#                  <div class="CT-feed-main col-xs-9 col-sm-10">#}
-{#                    <div class="CT-feed-main-content">#}
-{#                      <h4><a href="travel/0001">张睿东莞游</a></h4>#}
-{#                      <div class="CT-feed-summary">#}
-{#                        哈哈哈哈哈哈！！#}
-{#                        今天去东莞耍～买了台macbook！听说要扫黄了，还好我跑得早！！！！机智如我#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </div>#}
-{#                </div><!--/feed item-->#}
-              </div><!--/.row-->
-            </div>
-
-          </div><!-- /.tab-content -->
-              
-        </div><!--/span-->
-
-        </div><!--/span-->
-      </div><!--/row-->
 {% endblock %}
 
 {% block js %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/index.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/about.js"></script>
+
 {% endblock %}
