--- a/Co_Trip/templates/base.html
+++ b/Co_Trip/templates/base.html
@@ -57,6 +57,7 @@
             </div>
             <input type="submit" class="btn btn-default" value="搜索">
           </form>
+          <a href="/plan/create/" class="btn btn-success navbar-btn">＋创建旅行计划</a>
            {% if user.is_authenticated %}
           <ul class="nav navbar-nav navbar-right">
             <li>
