--- a/Co_Trip/templates/Co_Trip/public_index.html
+++ b/Co_Trip/templates/Co_Trip/public_index.html
@@ -83,7 +83,7 @@
                   <a href="/login/weibo" class="btn btn-sm btn-danger">使用新浪微博</a>
                 </div>
               </li>
-              <li class="social">
+              <!-- <li class="social">
                 <img src="{% static "imgs/renren_64x64.png" %}" alt="" class="social-logo pull-left" style="width: 36px;">
                 <div class="social-button">
                   <a href="#" class="btn btn-sm btn-primary">使用人人账号</a>
@@ -100,7 +100,7 @@
                 <div class="social-button">
                   <a href="#" class="btn btn-sm btn-success">使用豆瓣账号</a>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -120,7 +120,7 @@
     <script type="text/javascript" src="{% static "external/jQuery/jquery-1.10.2.js" %}"></script>
 
     <!-- Bootstrap core Javascript -->
-		<script type="text/javascript" src="{% static "external/Bootstrap/js/bootstrap.js" %}"></script>
+		<script type="text/javascript" src="{% static "external/Bootstrap3.1.1/js/bootstrap.js" %}"></script>
 
     <!-- Custom Javascript -->
     <script type="text/javascript" src="{% static "js/p_index.js" %}"></script>
