--- a/django_messages/templates/django_messages/compose.html
+++ b/django_messages/templates/django_messages/compose.html
@@ -5,12 +5,27 @@
 {% block main_content %}
 
 <h1>{% trans "Compose Message"%}</h1>
-<form action="" method="post">
-{% csrf_token %} 
-<table>
-{{ form.as_table }}
-</table>
-<input type="submit" value="{% trans "Send" %} &raquo;"/>
+<form action="" method="post" class="form form-horizontal">
+  {% csrf_token %}
+  <div class="form-group">
+    <label for="id_recipient" class="col-sm-2 control-label">收件人：</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="id_recipient" name="recipient" placeholder="收件人">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="id_subject" class="col-sm-2 control-label">主题：</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="id_subject" name="subject" maxlength="120" placeholder="主题">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="id_body" class="col-sm-2 control-label">正文：</label>
+    <div class="col-sm-10">
+      <textarea cols="55" id="id_body" name="body" rows="12" class="form-control" placeholder="在这里输入内容～">
+    </div>
+  </div>
+  <button type="submit" class="btn btn-danger">{% trans "Send" %}</button>
 </form>
 
 {% endblock %}
