--- a/django_messages/templates/django_messages/compose.html
+++ b/django_messages/templates/django_messages/compose.html
@@ -22,7 +22,7 @@
   <div class="form-group">
     <label for="id_body" class="col-sm-2 control-label">正文：</label>
     <div class="col-sm-10">
-      <textarea cols="55" id="id_body" name="body" rows="12" class="form-control" placeholder="在这里输入内容～">
+      <textarea cols="55" id="id_body" name="body" rows="12" class="form-control" placeholder="在这里输入内容～"></textarea>
     </div>
   </div>
   <button type="submit" class="btn btn-danger">{% trans "Send" %}</button>
