--- a/plan/templates/plan/create_step2.html
+++ b/plan/templates/plan/create_step2.html
@@ -53,7 +53,7 @@
         <div class="col-sm-9">
           <div class="page-header">
             <div class="pull-right form-inline">
-              <button class="btn btn-danger" data-calendar-act="add  ">Add</button>
+              <button class="btn btn-danger" data-calendar-act="add">Add</button>
               <div class="btn-group">
                 <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
                 <button class="btn btn-default" data-calendar-nav="today">Today</button>
@@ -68,7 +68,7 @@
             </div>
 
             <h3></h3>
-            <small>To see example with events navigate to march 2013</small>
+            <small>这是你的日程安排日历</small>
           </div>
 
           <div id="calendar"></div>
