--- a/plan/templates/plan/create_step2.html
+++ b/plan/templates/plan/create_step2.html
@@ -15,34 +15,34 @@
         <div class="col-sm-3">
           <div class="form-horizontal">
             <div class="form-group">
-              <label class="col-sm-3 control-label">出发日期</label>
-              <div class="col-sm-9">
-                <p class="form-control-static">{{ main_plan.leaving_date.date }}</p>
+              <label class="col-sm-4 control-label">出发日期</label>
+              <div class="col-sm-8">
+                <p class="form-control-static" id="leaving-date">{{ main_plan.leaving_date.date }}</p>
               </div>
             </div>
             <div class="form-group">
-              <label for="inputPassword" class="col-sm-3 control-label">目的地</label>
-              <div class="col-sm-9">
+              <label for="inputPassword" class="col-sm-4 control-label">目的地</label>
+              <div class="col-sm-8">
                   {% for d in main_plan.destination_city.all %}
                 <p class="form-control-static">{{ d }}</p>
                   {% endfor %}
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-3 control-label">返回日期</label>
-              <div class="col-sm-9">
-                <p class="form-control-static">{{ main_plan.return_date.date }}</p>
+              <label class="col-sm-4 control-label">返回日期</label>
+              <div class="col-sm-8">
+                <p class="form-control-static" id="return-date">{{ main_plan.return_date.date }}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-3 control-label">创建人</label>
-              <div class="col-sm-9">
+              <label class="col-sm-4 control-label">创建人</label>
+              <div class="col-sm-8">
                 <p class="form-control-static">{{ main_plan.creator }}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-3 control-label">参与者</label>
-              <div class="col-sm-9">
+              <label class="col-sm-4 control-label">参与者</label>
+              <div class="col-sm-8">
                   {% for pa in main_plan.participants.all %}
                 <p class="form-control-static">{{ pa }}</p>
                   {% endfor %}
