plan create page change

--- a/plan/templates/plan/create_step2.html
+++ b/plan/templates/plan/create_step2.html
@@ -68,7 +68,7 @@
             </div>
 
             <h3></h3>
-            <small>这是你的日程安排日历</small>
+            <small>这是你的日程安排日历～</small>
           </div>
 
           <div id="calendar"></div>
