text change small

--- a/plan/templates/plan/detail.html
+++ b/plan/templates/plan/detail.html
@@ -70,7 +70,7 @@
           </div>
 
           <h3></h3>
-          <small>To see example with events navigate to march 2013</small>
+          <small>这是你的日程安排日历～</small>
         </div>
 
         <div id="calendar"></div>
