--- a/traveller/templates/traveller/profile.html
+++ b/traveller/templates/traveller/profile.html
@@ -15,7 +15,7 @@
       <div class="panel-heading" id="profile-panel-heading">
         <div class="media">
           <div class="pull-left">
-            <img class="media-object img-thumbnail" src="{% get_avatar user 100 %}" alt="{{ traveller.user.username }}">
+            <img class="media-object img-thumbnail" src="{% get_avatar user 100 %}" alt="{{ traveller.user.username }}" style="width: 200px;">
           </div>
           <div class="media-body">
             <h2 class="media-heading">
