--- a/plan/templates/plan/create_step2.html
+++ b/plan/templates/plan/create_step2.html
@@ -14,13 +14,13 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="form-horizontal">
-            <div class="form-group">
+            <div class="form-group bs-callout bs-callout-warning">
               <label class="col-sm-4 control-label">出发日期</label>
               <div class="col-sm-8">
                 <p class="form-control-static" id="leaving-date">{{ main_plan.leaving_date.date }}</p>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group bs-callout bs-callout-warning">
               <label for="inputPassword" class="col-sm-4 control-label">目的地</label>
               <div class="col-sm-8">
                   {% for d in main_plan.destination_city.all %}
@@ -28,19 +28,19 @@
                   {% endfor %}
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group bs-callout bs-callout-warning">
               <label class="col-sm-4 control-label">返回日期</label>
               <div class="col-sm-8">
                 <p class="form-control-static" id="return-date">{{ main_plan.return_date.date }}</p>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group bs-callout bs-callout-warning">
               <label class="col-sm-4 control-label">创建人</label>
               <div class="col-sm-8">
                 <p class="form-control-static">{{ main_plan.creator }}</p>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group bs-callout bs-callout-warning">
               <label class="col-sm-4 control-label">参与者</label>
               <div class="col-sm-8">
                   {% for pa in main_plan.participants.all %}
